--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,4 @@
-name: DevCard
-
-permissions:
-  contents: write
+name: daily-devcard
 
 on:
   workflow_dispatch:
@@ -14,8 +11,11 @@ on:
 jobs:
   devcard:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: devcard
-        uses: dailydotdev/action-devcard@2.3.1
+        uses: dailydotdev/action-devcard@3.0.0
         with:
           devcard_id: ${{ secrets.DEVCARD_ID }}
+          commit_message: "chore: update ${filename}"
